--- a/inventory.ini
+++ b/inventory.ini
@@ -1,2 +1,6 @@
 [frontend] #inventory group name
          # list of servers in this group (not created so i did'nt mention)
+
+
+[local]
+localhost ansible_connection=local
