--- a/03-nginx.yaml
+++ b/03-nginx.yaml
@@ -1,6 +1,6 @@
 - name: nginx install and run
   hosts: frontend
-  become: yes # sudo access
+  become: yes # sudo access 
   tasks:
   - name: install nginx server
     ansible.builtin.package: # module to install packages it will work for all linux os dosen't care about yum or apt or dnt it is handle by ansible itself, packages will install all the os 
@@ -12,3 +12,11 @@
       name: nginx
       state: started # started means if it is not started it will start if it is started it will do nothing
       enabled: yes # enabled means if it is not enabled it will enable if it is enabled it will do nothing
+
+
+
+
+
+
+      # without sudo acess we cannot install packages or start services
+      
