--- a/inventory.ini
+++ b/inventory.ini
@@ -4,3 +4,8 @@
 
 [local]
 localhost ansible_connection=local
+
+[local:vars] #variables for local group
+COURSE=variables
+TRAINER=sivakumar
+DURATION=20HRS
