--- a/inventory.ini
+++ b/inventory.ini
@@ -1,11 +1,14 @@
-[frontend] #inventory group name
-         # list of servers in this group (not created so i did'nt mention)
-
+# this frontend variables are only for frontend group
+[frontend] # this is host variables
+ 172.25.89.147 course=ansible DURATION=40HRS TRAINER=sivakumar ansible_user=ec2-user ansible_password=DevOps321 #ansible connection details
+ 145.56.89.587 course=variables DURATION=20HRS TRAINER=spandu  ansible_user=ec2-user ansible_password=DevOps321      
 
 [local]
 localhost ansible_connection=local
 
-[local:vars] #variables for local group
+
+# these variables are for all the groups, so it is called as group variables
+[local:vars] #variables for local group 
 COURSE=variables
 TRAINER=sivakumar
 DURATION=20HRS
