--- a/11-vars-args.yaml
+++ b/11-vars-args.yaml
@@ -9,3 +9,6 @@
   - name: print course info
     ansible.builtin.debug:
       msg: "Hello I am learning {{ COURSE }}, Duration: {{ DURATION }}, Trainer is: {{ TRAINER }}"
+
+      # always command line variables have more priority than inventory file variables and other too 
+      
